--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -315,6 +315,12 @@
   "Permission": "Permission",
   "Change Language": "Dili Değiştir",
   "Dismiss": "Yoksay",
+  "Lightbox": "Lightbox",
+  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "Close": "Close",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Image failed to load": "Image failed to load",
   "You’re offline.": "Çevrimdışısınız.",
   "Sorry, an error occurred.": "Üzgünüz, bir hata oluştu.",
   "Click to retry": "Tekrar denemek için tıklayın",
@@ -714,7 +720,6 @@
   "Deleted by {{userName}}": "{{userName}} tarafından silindi",
   "Observing {{ userName }}": "{{ userName }} gözlemliyor",
   "Backlinks": "Geri bağlantılar",
-  "Close": "Close",
   "This document is large which may affect performance": "This document is large which may affect performance",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "<em>{{ documentTitle }}</em> şablonunu silmek istediğinizden emin misiniz?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
@@ -1255,5 +1260,6 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Open": "Open",
   "Error loading data": "Error loading data"
 }
