--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -315,6 +315,12 @@
   "Permission": "مجوز",
   "Change Language": "تغییر زبان",
   "Dismiss": "رد کردن",
+  "Lightbox": "Lightbox",
+  "View, navigate, or download images in the document": "View, navigate, or download images in the document",
+  "Close": "Close",
+  "Previous": "Previous",
+  "Next": "Next",
+  "Image failed to load": "Image failed to load",
   "You’re offline.": "شما آفلاین هستید.",
   "Sorry, an error occurred.": "متاسفیم، یک خطا رخ داد.",
   "Click to retry": "برای امتحان مجدد کلیک کنید",
@@ -714,7 +720,6 @@
   "Deleted by {{userName}}": "حذف شده توسط {{userName}}",
   "Observing {{ userName }}": "مشاهده {{ userName }}",
   "Backlinks": "Backlinks",
-  "Close": "Close",
   "This document is large which may affect performance": "This document is large which may affect performance",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "آیا مطئمن هستید که قالب <em>{{ documentTitle }}</em> را حذف نمایید؟",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
@@ -1255,5 +1260,6 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Open": "Open",
   "Error loading data": "Error loading data"
 }
