--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "currently viewing",
   "previously edited": "previously edited",
   "You": "You",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Viewers",
   "Collections are used to group documents and choose permissions": "Collections are used to group documents and choose permissions",
   "Name": "Name",
@@ -205,6 +206,7 @@
   "Move document": "Move document",
   "Moving": "Moving",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Submenu",
   "Collections could not be loaded, please reload the app": "Collections could not be loaded, please reload the app",
   "Start view": "Start view",
@@ -405,12 +407,15 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archived collections",
   "New doc": "New doc",
   "Empty": "Empty",
   "Collapse": "Collapse",
   "Expand": "Expand",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document not supported – try Markdown, Plain text, HTML, or Word",
+  "Import files": "Import files",
   "Go back": "Go back",
   "Go forward": "Go forward",
   "Could not load shared documents": "Could not load shared documents",
@@ -427,6 +432,7 @@
   "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
   "Return to App": "Back to App",
   "Installation": "Installation",
+  "Avatar of {{ name} }": "Avatar of {{ name} }",
   "Unstar document": "Unstar document",
   "Star document": "Star document",
   "Template created, go ahead and customize it": "Template created, go ahead and customize it",
