--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -331,6 +331,7 @@
   "Mark all as read": "Mark all as read",
   "You're all caught up": "You're all caught up",
   "Icon": "Icon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "My App",
   "Tagline": "Tagline",
   "A short description": "A short description",
@@ -466,6 +467,8 @@
   "Replacement": "Replacement",
   "Replace": "Replace",
   "Replace all": "Replace all",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profile picture",
   "Create a new doc": "Create a new doc",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -492,7 +495,8 @@
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Delete table",
   "Delete file": "Delete file",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
   "Delete image": "Delete image",
@@ -686,6 +690,7 @@
   "only you": "only you",
   "person": "person",
   "people": "people",
+  "Document title": "Document title",
   "Last updated": "Last updated",
   "Type '/' to insert, or start writing…": "Type '/' to insert, or start writing…",
   "Hide contents": "Hide contents",
@@ -930,6 +935,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1036,6 +1042,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Display",
   "The logo is displayed at the top left of the application.": "The logo is displayed at the top left of the application.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "The workspace name, usually the same as your company name.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1266,6 +1273,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "You created {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
