--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "en train de consulter",
   "previously edited": "modifié précédemment",
   "You": "Vous",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Lecteurs",
   "Collections are used to group documents and choose permissions": "Les collections sont utilisées pour regrouper les documents et définir les permissions",
   "Name": "Nom",
@@ -205,6 +206,7 @@
   "Move document": "Déplacer le document",
   "Moving": "En cours de déplacement",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Déplacer le document <em>{{ title }}</em> vers la collection {{ newCollectionName }} changera les permissions pour tous les membres de l'espace de travail de <em>{{ prevPermission }}</em> à <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Sous-menu",
   "Collections could not be loaded, please reload the app": "Les collections n'ont pas pu être chargées, veuillez recharger la page",
   "Start view": "Page d'accueil",
@@ -329,6 +331,7 @@
   "Mark all as read": "Tout marquer comme lu",
   "You're all caught up": "Vous êtes à jour",
   "Icon": "Icône",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Mon application",
   "Tagline": "Accroche",
   "A short description": "Une courte description",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} groupes ajoutés au document",
   "{{ count }} groups added to the document_plural": "{{ count }} groupes ajoutés au document",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Collections archivées",
   "New doc": "Nouveau doc",
   "Empty": "Vide",
   "Collapse": "Réduire",
   "Expand": "Développer",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Document non pris en charge - essayez un format Markdown, Text, HTML ou Word",
+  "Import files": "Import files",
   "Go back": "Revenir en arrière",
   "Go forward": "Continuer",
   "Could not load shared documents": "Impossible de charger les documents partagés",
@@ -460,6 +466,8 @@
   "Replacement": "Remplacement",
   "Replace": "Remplacer",
   "Replace all": "Tout remplacer",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Photo de profil",
   "Create a new doc": "Créer un nouveau doc",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} ne sera pas notifié, car il n'a pas accès à ce document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Créer un nouveau document enfant",
   "Delete table": "Supprimer ce tableau",
   "Delete file": "Supprimer le fichier",
-  "Width x Height": "Largeur x Hauteur",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Télécharger le fichier",
   "Replace file": "Remplacer le fichier",
   "Delete image": "Supprimer l'image",
@@ -680,6 +689,7 @@
   "only you": "moi uniquement",
   "person": "personne",
   "people": "personnes",
+  "Document title": "Document title",
   "Last updated": "Dernière mise à jour",
   "Type '/' to insert, or start writing…": "Tapez '/' pour insérer, ou commencez à écrire…",
   "Hide contents": "Masquer le contenu",
@@ -924,6 +934,7 @@
   "Rotate secret": "Changer le secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotation du secret client invalidera le secret actuel. Assurez-vous de mettre à jour toutes les applications utilisant ces identifiants.",
   "Displayed to users when authorizing": "Affiché aux utilisateurs lors de l'autorisation",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Informations du développeur affichées aux utilisateurs lors de l'autorisation",
   "Developer name": "Nom du développeur",
   "Developer URL": "URL de développement",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Ces paramètres changent la façon dont l'espace de travail apparait pour tous les membres de l'équipe.",
   "Display": "Affichage",
   "The logo is displayed at the top left of the application.": "Le logo apparaît en haut à gauche de l'application.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Le nom de l'espace de travail, généralement le même que celui de votre entreprise.",
   "Description": "Description",
   "A short description of your workspace.": "Une courte description de votre espace de travail.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "Mis à jour par {{ user }} il y a {{ timeAgo }}",
   "You created {{ timeAgo }}": "Créé par vous il y a {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "Créé par {{ user }} il y a {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Erreur de chargement des données"
 }
