fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "jelenleg megtekinti",
   "previously edited": "előzőleg szerkesztette",
   "You": "Ön",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Megtekintők",
   "Collections are used to group documents and choose permissions": "A gyűjtemények dokumentuok csoportosítására és jogosultságok beállítására szolgálnak",
   "Name": "Név",
@@ -205,6 +206,7 @@
   "Move document": "Dokumentum áthelyezése",
   "Moving": "Áthelyezés",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "A {{ title }} nevű dokumentum áthelyezése a {{ newCollectionName }} gyűjteménybe megváltoztatja a munkaterület tagjainak hozzáférését: {{ prevPermission }} -> {{ newPermission }}",
+  "More options": "More options",
   "Submenu": "Almenü",
   "Collections could not be loaded, please reload the app": "A gyűjtemények nem tölthetők be, kérem töltse újra a programot",
   "Start view": "Kezdje el",
@@ -329,6 +331,7 @@
   "Mark all as read": "Összes megjelölése olvasottként",
   "You're all caught up": "Minden hozzászólást elolvasott",
   "Icon": "Ikon",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Az én alkalmazásom",
   "Tagline": "Jelmondat",
   "A short description": "Rövid leírás",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} eltávolítva a dokumentumból",
   "{{ count }} groups added to the document_plural": "{{ count }} eltávolítva a dokumentumból",
   "Logo": "Logó",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Keresés a gyűjteményben",
   "New doc": "Új doku",
   "Empty": "Üres",
   "Collapse": "Összezárás",
   "Expand": "Kinyitás",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Ez a dokumentum nem támogatott – próbáljon Markdown, egyszerű szöveg, HTML vagy Word formátumot",
+  "Import files": "Import files",
   "Go back": "Ugrás vissza",
   "Go forward": "Előrelépés",
   "Could not load shared documents": "Nem lehet menteni a dokumentumot",
@@ -460,6 +466,8 @@
   "Replacement": "Csere",
   "Replace": "Cserél",
   "Replace all": "Összeset cseréli",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profilkép",
   "Create a new doc": "Új doku létrehozása",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Új doku létrehozása",
   "Delete table": "Táblázat törlése",
   "Delete file": "Fájl törlése",
-  "Width x Height": "Width x Height",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Fájl letöltése",
   "Replace file": "Fájl lecserélése",
   "Delete image": "Kép törlése",
@@ -680,6 +689,7 @@
   "only you": "only you",
   "person": "személy",
   "people": "személyek",
+  "Document title": "Document title",
   "Last updated": "Utolsó frissítés",
   "Type '/' to insert, or start writing…": "Gépeljen be egy „/” karaktert a beszúráshoz, vagy kezdjen el írni…",
   "Hide contents": "Tartalomjegyzék elrejtése",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
   "Displayed to users when authorizing": "Displayed to users when authorizing",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Developer name",
   "Developer URL": "Developer URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "These settings affect the way that your workspace appears to everyone on the team.",
   "Display": "Megjelenítés",
   "The logo is displayed at the top left of the application.": "The logo is displayed at the top left of the application.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "The workspace name, usually the same as your company name.",
   "Description": "Description",
   "A short description of your workspace.": "A short description of your workspace.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} updated {{ timeAgo }}",
   "You created {{ timeAgo }}": "Ön hozta létre {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} created {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error loading data"
 }
