fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "obecnie wyświetlasz",
   "previously edited": "poprzednio edytowane",
   "You": "Ty",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Oglądający",
   "Collections are used to group documents and choose permissions": "Kolekcje służą do grupowania dokumentów i wybierania uprawnień",
   "Name": "Nazwa",
@@ -205,6 +206,7 @@
   "Move document": "Przenieś dokument",
   "Moving": "Przenoszenie",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Przenoszenie dokumentu <em>{{ title }}</em> do kolekcji {{ newCollectionName }} zmieni uprawnienia dla wszystkich członków obszaru roboczego z <em>{{ prevPermission }}</em> na <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Podmenu",
   "Collections could not be loaded, please reload the app": "Nie można załadować kolekcji, proszę odświeżyć aplikację",
   "Start view": "Widok startowy",
@@ -329,6 +331,7 @@
   "Mark all as read": "Oznacz wszystkie jako przeczytane",
   "You're all caught up": "Jesteś na bieżąco",
   "Icon": "Ikona",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Moja aplikacja",
   "Tagline": "Opis",
   "A short description": "Krótki opis",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupa dodana do dokumentu",
   "{{ count }} groups added to the document_plural": "{{ count }} grup dodanych do dokumentu",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Zarchiwizowane kolekcje",
   "New doc": "Nowy dok",
   "Empty": "Pusty",
   "Collapse": "Zwiń",
   "Expand": "Rozwiń",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nie jest obsługiwany – spróbuj formatu Markdown, zwykłego tekstu, HTML lub Word",
+  "Import files": "Import files",
   "Go back": "Wróć",
   "Go forward": "Idź do przodu",
   "Could not load shared documents": "Nie można załadować udostępnionych dokumentów",
@@ -460,6 +466,8 @@
   "Replacement": "Zastąpienie",
   "Replace": "Zamień",
   "Replace all": "Zamień wszystko",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Zdjęcie profilowe",
   "Create a new doc": "Utwórz nowy dokument",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} nie zostanie powiadomiony, ponieważ nie mają dostępu do tego dokumentu",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Utwórz nowy dokument podrzędny",
   "Delete table": "Usuń tabelę",
   "Delete file": "Usuń plik",
-  "Width x Height": "Szerokość x Wysokość",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Pobierz plik",
   "Replace file": "Zastąp plik",
   "Delete image": "Usuń obraz",
@@ -680,6 +689,7 @@
   "only you": "tylko ty",
   "person": "osoba",
   "people": "osoby",
+  "Document title": "Document title",
   "Last updated": "Ostatnia aktualizacja",
   "Type '/' to insert, or start writing…": "Wpisz „/”, aby wstawić, lub zacznij pisać…",
   "Hide contents": "Ukryj zawartość",
@@ -924,6 +934,7 @@
   "Rotate secret": "Zmień sekret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotacja (zmiana) sekretu klienta spowoduje unieważnienie bieżącego sekretu. Upewnij się, że zaktualizujesz wszystkie aplikacje korzystające z tych danych uwierzytelniających.",
   "Displayed to users when authorizing": "Wyświetlane użytkownikom podczas autoryzacji",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Informacje o deweloperze wyświetlane użytkownikom podczas autoryzacji",
   "Developer name": "Nazwa dewelopera",
   "Developer URL": "Adres URL dewelopera",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Ustawienia te wpływają na to, jak Twoja przestrzeń robocza jest widoczna dla wszystkich w zespole.",
   "Display": "Wyświetlanie",
   "The logo is displayed at the top left of the application.": "Logo jest wyświetlane w lewym górnym rogu aplikacji.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Nazwa przestrzeni roboczej, zazwyczaj taka sama jak nazwa Twojej firmy.",
   "Description": "Opis",
   "A short description of your workspace.": "Krótki opis Twojego obszaru roboczego.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} zaktualizował {{ timeAgo }}",
   "You created {{ timeAgo }}": "Utworzyłeś {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} utworzył {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Błąd ładowania danych"
 }
