--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "현재 보는 중",
   "previously edited": "이전에 수정됨",
   "You": "본인",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "열람자",
   "Collections are used to group documents and choose permissions": "컬렉션은 문서를 그룹화하고 권한을 지정하는 데 사용됩니다",
   "Name": "이름",
@@ -205,6 +206,7 @@
   "Move document": "문서 이동",
   "Moving": "이동 중",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "문서 <em>{{ title }}</em>을(를) {{ newCollectionName }} 컬렉션으로 이동하면 모든 작업 공간 멤버의 권한이 <em>{{ prevPermission }}</em>에서 <em>{{ newPermission }}</em>으로 변경됩니다.",
+  "More options": "More options",
   "Submenu": "하위 메뉴",
   "Collections could not be loaded, please reload the app": "컬렉션을 불러올 수 없습니다. 앱을 새로고침하세요",
   "Start view": "시작 화면",
@@ -329,6 +331,7 @@
   "Mark all as read": "모두 읽은 상태로 표시",
   "You're all caught up": "모두 확인함",
   "Icon": "아이콘",
+  "OAuth client icon": "OAuth client icon",
   "My App": "내 앱",
   "Tagline": "태그라인",
   "A short description": "간단한 설명",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} 개의 그룹이 문서에 추가됨",
   "{{ count }} groups added to the document_plural": "{{ count }} 개의 그룹이 문서에 추가됨",
   "Logo": "로고",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "보관된 컬렉션",
   "New doc": "새 문서",
   "Empty": "비어 있음",
   "Collapse": "감추기",
   "Expand": "펼치기",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "이 문서는 지원되지 않습니다 – Markdown, Plain Text, HTML이나 Word를 이용해주세요",
+  "Import files": "Import files",
   "Go back": "돌아가기",
   "Go forward": "앞으로 가기",
   "Could not load shared documents": "공유 문서를 불러올 수 없습니다.",
@@ -460,6 +466,8 @@
   "Replacement": "대체",
   "Replace": "바꾸기",
   "Replace all": "모두 바꾸기",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "프로필 사진",
   "Create a new doc": "새 문서 만들기",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} 은(는) 이 문서에 대한 액세스 권한이 없으므로 알림을 받지 않습니다.",
@@ -486,7 +494,8 @@
   "Create a new child doc": "새 하위 문서 생성",
   "Delete table": "테이블 삭제",
   "Delete file": "파일 삭제",
-  "Width x Height": "너비 x 높이",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "파일 다운로드",
   "Replace file": "파일 바꾸기",
   "Delete image": "이미지 삭제",
@@ -680,6 +689,7 @@
   "only you": "나만",
   "person": "개인",
   "people": "명",
+  "Document title": "Document title",
   "Last updated": "마지막 업데이트",
   "Type '/' to insert, or start writing…": "'/'를 입력하여 삽입하거나 쓰기 시작...",
   "Hide contents": "내용 숨기기",
@@ -924,6 +934,7 @@
   "Rotate secret": "시크릿 교체",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "클라이언트 시크릿을 교체하면 현재 시크릿이 무효화됩니다. 이 자격 증명을 사용하는 모든 애플리케이션을 업데이트해야 합니다.",
   "Displayed to users when authorizing": "사용자가 권한을 부여할 때 표시됨",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "사용자가 권한을 부여할 때 표시되는 개발자 정보",
   "Developer name": "개발자 이름",
   "Developer URL": "개발자 URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "이러한 설정은 팀의 모든 사람에게 워크스페이스가 표시되는 방식에 영향을 줍니다.",
   "Display": "표시",
   "The logo is displayed at the top left of the application.": "로고는 애플리케이션의 왼쪽 상단에 표시됩니다.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "워크스페이스 이름은 일반적으로 회사 이름과 동일합니다.",
   "Description": "설명",
   "A short description of your workspace.": "워크스페이스에 대한 간략한 설명입니다.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} 업데이트 됨 {{ timeAgo }}",
   "You created {{ timeAgo }}": "{{ timeAgo }} 전에 내가 생성함",
   "{{ user }} created {{ timeAgo }}": "{{ user }} 이(가) {{ timeAgo }} 전에 생성",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "데이터 로딩 오류"
 }
