fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "gerade angezeigt",
   "previously edited": "zuvor bearbeitet",
   "You": "Sie",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Betrachter",
   "Collections are used to group documents and choose permissions": "Kollektionen werden verwendet, um Dokumente zu gruppieren und Berechtigungen auszuwählen",
   "Name": "Name",
@@ -205,6 +206,7 @@
   "Move document": "Dokument verschieben",
   "Moving": "Bewegen",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Das Verschieben des Dokuments <em>{{ title }}</em> in die {{ newCollectionName }} Kollektion wird die Berechtigung für alle Mitglieder des Arbeitsbereiches von <em>{{ prevPermission }}</em> zu <em>{{ newPermission }}</em> ändern.",
+  "More options": "More options",
   "Submenu": "Untermenü",
   "Collections could not be loaded, please reload the app": "Kollektionen konnten nicht geladen werden, bitte lade die App neu",
   "Start view": "Startseite",
@@ -329,6 +331,7 @@
   "Mark all as read": "Alle als gelesen markieren",
   "You're all caught up": "Du bist auf dem neusten Stand",
   "Icon": "Symbol",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Meine Anwendung",
   "Tagline": "Tagline",
   "A short description": "Eine kurze Beschreibung",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} Gruppen zu dem Dokument eingeladen",
   "{{ count }} groups added to the document_plural": "{{ count }} Gruppen wurden dem Dokument hinzugefügt",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Archivierte Kollektionen",
   "New doc": "Neues Dokument",
   "Empty": "Leer",
   "Collapse": "Zusammenklappen",
   "Expand": "Ausklappen",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Dokument nicht unterstützt - versuche Markdown, Klartext, HTML oder Word",
+  "Import files": "Import files",
   "Go back": "Zurück",
   "Go forward": "Vor",
   "Could not load shared documents": "Konnte geteilte Dokumente nicht laden",
@@ -460,6 +466,8 @@
   "Replacement": "Ersetzung",
   "Replace": "Ersetzen",
   "Replace all": "Alle ersetzen",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Profilbild",
   "Create a new doc": "Neues Dokument erstellen",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wird nicht benachrichtigt, da sie keinen Zugriff auf dieses Dokument haben",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Neues untergeordnetes Dokument erstellen",
   "Delete table": "Tabelle löschen",
   "Delete file": "Datei löschen",
-  "Width x Height": "Breite x Höhe",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Datei herunterladen",
   "Replace file": "Datei ersetzen",
   "Delete image": "Bild löschen",
@@ -680,6 +689,7 @@
   "only you": "Dir",
   "person": "Person",
   "people": "Personen",
+  "Document title": "Document title",
   "Last updated": "Zuletzt aktualisiert",
   "Type '/' to insert, or start writing…": "Tippe '/' zum Einfügen, oder beginne mit dem Schreiben…",
   "Hide contents": "Inhalt ausblenden",
@@ -924,6 +934,7 @@
   "Rotate secret": "Geheimen Schlüssel rotieren",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Das Rotieren des Client-Secrets macht das aktuelle Secret ungültig. Stellen Sie sicher, dass Sie alle Anwendungen, die diese Zugangsdaten verwenden, entsprechend aktualisieren.",
   "Displayed to users when authorizing": "Wird den Benutzern bei der Autorisierung angezeigt",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Entwicklerinformationen, die den Benutzern bei der Autorisierung angezeigt werden",
   "Developer name": "Entwicklername",
   "Developer URL": "Entwickler-URL",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Diese Einstellungen wirken sich auf die Art und Weise aus, wie Ihr Arbeitsbereich für alle Teammitglieder erscheint.",
   "Display": "Anzeige",
   "The logo is displayed at the top left of the application.": "Das Logo wird oben links in der Anwendung angezeigt.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Der Name des Arbeitsbereichs, in der Regel der Name Ihres Unternehmens.",
   "Description": "Beschreibung",
   "A short description of your workspace.": "Eine kurze Beschreibung Ihres Arbeitsbereichs.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} aktualisierte vor {{ timeAgo }}",
   "You created {{ timeAgo }}": "Du hast vor {{ timeAgo }} erstellt",
   "{{ user }} created {{ timeAgo }}": "{{ user }} erstellte vor {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Fehler beim Laden der Daten"
 }
