fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -175,6 +175,7 @@
   "currently viewing": "visualizando actualmente",
   "previously edited": "ha editado previamente",
   "You": "Tú",
+  "Avatar of {{ name }}": "Avatar of {{ name }}",
   "Viewers": "Lectores",
   "Collections are used to group documents and choose permissions": "Las colecciones se utilizan para agrupar documentos y elegir permisos",
   "Name": "Nombre",
@@ -205,6 +206,7 @@
   "Move document": "Mover documento",
   "Moving": "Moviendo",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Al mover el documento <em>{{ title }}</em> a la colección {{ newCollectionName }} se cambiará el permiso de todos los miembros del área de trabajo de <em>{{ prevPermission }}</em> a <em>{{ newPermission }}</em>.",
+  "More options": "More options",
   "Submenu": "Submenú",
   "Collections could not be loaded, please reload the app": "No se pudieron cargar las colecciones, por favor recarga la aplicación",
   "Start view": "Vista inicial",
@@ -329,6 +331,7 @@
   "Mark all as read": "Marcar todas como leídas",
   "You're all caught up": "Estás al día",
   "Icon": "Ícono",
+  "OAuth client icon": "OAuth client icon",
   "My App": "Mi aplicación",
   "Tagline": "Lema",
   "A short description": "Una breve descripción",
@@ -405,12 +408,15 @@
   "{{ count }} groups added to the document": "{{ count }} grupo invitado al documento",
   "{{ count }} groups added to the document_plural": "{{ count }} grupos invitados al documento",
   "Logo": "Logo",
+  "Expand sidebar": "Expand sidebar",
+  "Collapse sidebar": "Collapse sidebar",
   "Archived collections": "Colecciones archivadas",
   "New doc": "Nuevo doc",
   "Empty": "Vacío",
   "Collapse": "Colapsar",
   "Expand": "Expandir",
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Documento no compatible – intenta Markdown, Texto sin formato, HTML o Word",
+  "Import files": "Import files",
   "Go back": "Volver",
   "Go forward": "Avanzar",
   "Could not load shared documents": "No se pudo cargar los documentos compartidos",
@@ -460,6 +466,8 @@
   "Replacement": "Reemplazo",
   "Replace": "Reemplazar",
   "Replace all": "Reemplazar todas",
+  "Image width": "Image width",
+  "Image height": "Image height",
   "Profile picture": "Foto de perfil",
   "Create a new doc": "Crea un nuevo documento",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} no será notificado, ya que no tiene acceso a este documento",
@@ -486,7 +494,8 @@
   "Create a new child doc": "Crear un nuevo documento hijo",
   "Delete table": "Eliminar tabla",
   "Delete file": "Eliminar el archivo",
-  "Width x Height": "Anchura x Altura",
+  "Width": "Width",
+  "Height": "Height",
   "Download file": "Descargar el archivo",
   "Replace file": "Reemplazar el archivo",
   "Delete image": "Eliminar imagen",
@@ -680,6 +689,7 @@
   "only you": "solo tú",
   "person": "persona",
   "people": "personas",
+  "Document title": "Document title",
   "Last updated": "Última actualización",
   "Type '/' to insert, or start writing…": "Escribe '/' para insertar, o empieza a escribir…",
   "Hide contents": "Ocultar contenidos",
@@ -924,6 +934,7 @@
   "Rotate secret": "Rotar secreto",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotar el secreto del cliente invalidará el secreto actual. Asegúrate de actualizar cualquier aplicación que utilice estas credenciales.",
   "Displayed to users when authorizing": "Mostrado a los usuarios mientras se autorizan",
+  "Application icon": "Application icon",
   "Developer information shown to users when authorizing": "Developer information shown to users when authorizing",
   "Developer name": "Nombre del desarrollador",
   "Developer URL": "URL de desarollo",
@@ -1030,6 +1041,7 @@
   "These settings affect the way that your workspace appears to everyone on the team.": "Estas configuraciones afectan la forma en la que el espacio de trabajo aparece para todos en el equipo.",
   "Display": "Aspecto",
   "The logo is displayed at the top left of the application.": "El logo se muestra en la parte superior izquierda de la aplicación.",
+  "Workspace logo": "Workspace logo",
   "The workspace name, usually the same as your company name.": "Nombre del espacio de trabajo, usualmente igual al nombre de tu empresa.",
   "Description": "Descripción",
   "A short description of your workspace.": "Una breve descripción de tu espacio de trabajo.",
@@ -1260,6 +1272,7 @@
   "{{ user }} updated {{ timeAgo }}": "{{ user }} lo actualizó {{ timeAgo }}",
   "You created {{ timeAgo }}": "Tú lo creaste {{ timeAgo }}",
   "{{ user }} created {{ timeAgo }}": "{{ user }} lo creó {{ timeAgo }}",
+  "Caption": "Caption",
   "Open": "Open",
   "Error loading data": "Error al cargar datos"
 }
